--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
     <title>SOS Village</title>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/phaser/1.1.4/phaser.min.js"></script>
+    <script src="assets/js/pixi.js"></script>
     <style>
       body {margin: 0}
     </style>
